<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.ResultActivity">

    <ScrollView
        android:id="@+id/result_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/result_cv_face"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/result_iv_face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/test_image"
                    tools:background="@color/colorPrimaryDark"
                    tools:layout_height="300dp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/result_tv_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/result_tv_age"
                app:layout_constraintStart_toStartOf="@id/result_tv_age"
                tools:text="@string/result_emotion" />

            <TextView
                android:id="@+id/result_tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/m"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/result_cv_face"
                app:layout_constraintStart_toStartOf="@id/result_cv_face"
                tools:text="@string/result_age" />

            <TextView
                android:id="@+id/result_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/result_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/result_cv_face" />

            <TextView
                android:id="@+id/result_tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/l"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/result_tv_title"
                app:layout_constraintTop_toBottomOf="@id/result_tv_title"
                tools:text="@string/result_content" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/result_chart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/result_tv_content" />

            <TextView
                android:id="@+id/result_tv_rights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/result_rights"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_chart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/result_fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="customOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_more" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/result_fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:onClick="customOnClick"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/result_fab_menu"
        app:layout_constraintEnd_toEndOf="@id/result_fab_menu"
        app:layout_constraintStart_toStartOf="@id/result_fab_menu"
        app:srcCompat="@drawable/share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/result_fab_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:onClick="customOnClick"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/result_fab_share"
        app:layout_constraintEnd_toEndOf="@id/result_fab_share"
        app:layout_constraintStart_toStartOf="@id/result_fab_share"
        app:srcCompat="@drawable/instagram" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/result_fab_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:onClick="customOnClick"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/result_fab_instagram"
        app:layout_constraintEnd_toEndOf="@id/result_fab_instagram"
        app:layout_constraintStart_toStartOf="@id/result_fab_instagram"
        app:srcCompat="@drawable/twitter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/result_fab_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:onClick="customOnClick"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/result_fab_twitter"
        app:layout_constraintEnd_toEndOf="@id/result_fab_twitter"
        app:layout_constraintStart_toStartOf="@id/result_fab_twitter"
        app:srcCompat="@drawable/download" />

</androidx.constraintlayout.widget.ConstraintLayout>